<resources>
    <string name="app_name">SprintFinal5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_mercado_liebre">Logo Mercado Liebre</string>
    <string name="carro_de_compras">Carro de Compras</string>
    <string name="mercado_nliebre">mercado \nliebre</string>
    <string name="elige_lo_que_quieras">Elige lo que quieras !!!!</string>
    <string name="carro_de_compra">Carro de Compras</string>
    <string name="eliminar_carro">Eliminar Carro</string>
    <string name="by_oskaruno">By OskarUno</string>
    <string name="detalle_del_articulo">Detalle del Articulo</string>
    <string name="imagen_de_articulo">Imagen de Articulo</string>
    <string name="nombre_del_articulo">Nombre del Articulo</string>
    <string name="_100000">$100000</string>
    <string name="agregar_articulo">Agregar Articulo</string>
    <string name="imagen">Imagen</string>
    <string name="_10000">$10000</string>
    <string name="detalle">Detalle</string>
    <string name="nombre">Nombre</string>
    <string name="sku">sku:</string>
    <string name="_100">100</string>
</resources>