<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellowLight"
    tools:context=".DetalleFragment">

    <TextView
        android:id="@+id/tvDetalleArticulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/detalle_del_articulo"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tvNombreDetalle"
        app:layout_constraintStart_toStartOf="@+id/tvNombreDetalle"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreDetalle" />

    <TextView
        android:id="@+id/tvNombreDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nombre_del_articulo"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ivDetalle"
        app:layout_constraintStart_toStartOf="@+id/ivDetalle"
        app:layout_constraintTop_toBottomOf="@+id/ivDetalle" />

    <ImageView
        android:id="@+id/ivDetalle"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/imagen_de_articulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvPrecioDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/_100000"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvDetalleArticulo"
        app:layout_constraintStart_toStartOf="@+id/tvDetalleArticulo"
        app:layout_constraintTop_toBottomOf="@+id/tvDetalleArticulo" />

    <Button
        android:id="@+id/btnAgregarArticulo"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/agregar_articulo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrecioDetalle" />

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/blue"
        android:text="Atras"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btnAgregarArticulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnAgregarArticulo" />

    <TextView
        android:id="@+id/tvSkuText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="SKU: "
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/ivDetalle"
        app:layout_constraintEnd_toEndOf="@+id/ivDetalle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ivDetalle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSkuItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="100"
        android:textColor="@color/blue"
        app:layout_constraintStart_toEndOf="@+id/tvSkuText2"
        app:layout_constraintTop_toTopOf="@+id/tvSkuText2" />
</androidx.constraintlayout.widget.ConstraintLayout>