<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFE600"
                tools:context=".MainActivity">

                <TextView
                    android:id="@+id/tvDescripcion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/elige_lo_que_quieras"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/titulo1"
                    android:layout_width="117dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/mercado_nliebre"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/tvDescripcion"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.391"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/ivCarro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="28dp"
                    android:background="#FFE600"
                    android:contentDescription="@string/carro_de_compras"
                    app:layout_constraintBottom_toBottomOf="@+id/titulo1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/titulo1"
                    app:srcCompat="@drawable/carrito_de_compras" />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="77dp"
                    android:layout_height="67dp"
                    android:contentDescription="@string/logo_mercado_liebre"
                    app:layout_constraintBottom_toBottomOf="@+id/titulo1"
                    app:layout_constraintEnd_toStartOf="@+id/titulo1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/titulo1"
                    app:srcCompat="@drawable/iconmeli" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMain"
        android:layout_width="409dp"
        android:layout_height="612dp"
        android:layout_marginTop="1dp"
        tools:listitem="@layout/articulo_layout"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl1" />
</androidx.constraintlayout.widget.ConstraintLayout>